--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,11 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="Henrick Tambourou">
+    <meta property="og:description" content="Henrick's portfolio page.">
+    <meta property="og:image" content="%PUBLIC_URL%/preview.png">
+    <meta property="og:url" content="https://henricktambourou.com/">
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
